# c--pkg-reg

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cpkg
.commandcode/: proejct.md
.commandcode/taste/: taste.md
cpkg-test-lab/: c.c  cpkg.toml  test.cpp
cpkg-test-lab/.cpkg/include/: fmt
src/: cli.rs  errors.rs  init.rs  main.rs  paths.rs  script.rs  types.rs
src/compiler/: detect.rs  mod.rs  version.rs
src/config/: lockfile.rs  mod.rs  project.rs  resolver.rs
src/package/: build.rs  extract.rs  fetch.rs  link.rs  mod.rs  verify.rs
tests/: package_tests.rs
