[package]
name = "cpkg"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
which = "6"
regex = "1"
semver = { version = "1", features = ["serde"] }
sha2 = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tar = "0.4"
flate2 = "1"
dirs = "5"
log = "0.4"
env_logger = "0.11"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
